extract ModelField class